--- a/github-plus.css
+++ b/github-plus.css
@@ -411,21 +411,42 @@ header, .context-menu, .megamenu-content, footer{
     background-image: linear-gradient( 180deg , hsla(0, 0%, 100%, 0.8), hsla(0, 0%, 100%, 0)); 
 }
 
-/* --- 新增：自定义字体设置 --- */
+/* --- 新增：自定义字体设置 (内置字体) --- */
 
-/* 1. 设置全局正文字体 */
+/* 1. 定义内置的中文字体 */
+@font-face {
+    /* 在 CSS 中为这个字体家族起一个名字 */
+    font-family: 'Maple Mono'; 
+    /* 引用字体文件的相对路径，并指定格式为 truetype */
+    src: url('./github-plus/fonts/MapleMonoNormal-Bold.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+/* 2. 定义内置的英文/代码字体 (可变字体) */
+@font-face {
+    /* 在 CSS 中为这个字体家族起一个名字 */
+    font-family: 'Google Sans Code';
+    /* 引用字体文件的相对路径，并指定格式为 truetype-variations */
+    src: url('./github-plus/fonts/GoogleSansCode[wght].ttf') format('truetype-variations');
+    /* 指定支持的字重范围，通常可以从字体信息中找到 */
+    font-weight: 200 800;
+    font-style: normal;
+}
+
+/* 3. 应用这些定义好的字体 */
+/* 设置全局正文字体 */
 body {
-    /* 将 "LXGW WenKai" 替换成您电脑上已安装的字体名称 */
-    font-family: "MapleMonoNormal-Bold", "Open Sans", "Clear Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    /* 优先使用我们刚定义的 'Maple Mono' */
+    font-family: "Maple Mono";
 }
 
-/* 2. (可选) 设置代码字体 */
-/* 如果您想让代码块和正文的字体不一样，可以修改这里 */
+/* 设置代码块和行内代码的字体 */
 .md-fences, code, tt {
-    /* 将 "Cascadia Code" 替换成您喜欢的等宽编程字体 */
-    font-family: "Google Sans Code Semibold", "Cascadia Code", "Fira Code", monospace;
+    /* 优先使用我们刚定义的 'Google Sans Code'，并指定使用 Semibold (600) 字重 */
+    font-family: "Google Sans Code";
+    font-weight: 600;
 }
-
 
 /* --- 新增：左下角GIF轮播 --- */
 footer.ty-footer::before {
